Seccion Projectos con carrusel

--- a/Portfolio/src/app/app.component.html
+++ b/Portfolio/src/app/app.component.html
@@ -57,89 +57,141 @@
     <!-- Works -->
 
     <section class="works">
-        <div>
-            <div class="titleWorks">
-                <h2>Works</h2>
-                <h3>Relevant experience</h3>
-                <hr>
+        <div class="titleWorks">
+            <h2>Works</h2>
+            <h3>Relevant experience</h3>
+            <hr>
+        </div>
+        <div class="divWorks">
+            <div class="containerWork">
+                <img src="../assets/img/O'chaMockup.jpg" alt="O'cha Mockup">
+               <div class="textContainerWork">
+                    <h3 class="t-stroke">O'cha<span>O'cha</span></h3>
+                    <h4>Freelancer</h4>
+                    <h5>Abr 2020</h5>
+                    <ul>
+                        <li>Invitation card</li>
+                    </ul>
+               </div> 
             </div>
-            <div>
-                <img src="" alt="Crafting's business card">
-                <h3>Crafting</h3>
-                <h4>Freelancer</h4>
-                <h4>Abr 2020 - Presente</h4>
-                <ul>
-                    <li>Brand design</li>
-                    <li>Packaging</li>
-                    <li>3D modeling and design</li>
-                    <li>Photography</li>
-                    <li>Design and management of social networks</li>
-                </ul>
+            <div class="containerWork">
+                <img src="../assets/img/CraftingBusinessCard.jpg" alt="Crafting's business card">
+               <div class="textContainerWork">
+                    <h3 class="t-stroke">Crafting<span>Crafting</span></h3>
+                    <h4>Freelancer</h4>
+                    <h5>Abr 2020 - Presente</h5>
+                    <ul>
+                        <li>Brand design</li>
+                        <li>3D modeling and design</li>
+                        <li>Photography</li>
+                        <li>Design and management of social networks</li>
+                    </ul>
+               </div> 
             </div>
-            <div>
-                <img src="" alt="Logo FPFIX">
-                <h3>FPFIX</h3>
-                <h4>Freelancer</h4>
-                <h4>Oct 2021 - Nov 2021</h4>
-                <ul>
-                    <li>Logo design</li>
-                    <li>Stationery design</li>
-                    <li>Social media design</li>
-                </ul>
+            <div class="containerWork">
+                <img src="../assets/img/FPfixLogoMockup.jpg" alt="Logo FPFIX">
+                <div class="textContainerWork">
+                    <h3 class="t-stroke">FPFIX<span>FPFIX</span></h3>
+                    <h4>Freelancer</h4>
+                    <h5>Oct 2021 - Nov 2021</h5>
+                    <ul>
+                        <li>Logo design</li>
+                        <li>Stationery design</li>
+                        <li>Social media design</li>
+                    </ul>
+                </div>
             </div>
-            <div>
-                <img src="" alt="MRconstrucciones business card">
-                <h3>MRcons</h3>
-                <h4>Freelancer</h4>
-                <h4>Oct 2021 - Presente</h4>
-                <ul>
-                    <li>Logo design</li>
-                    <li>Stationery design</li>
-                    <li>Web design and development</li>
-                </ul>
+            <div class="containerWork">
+                <img src="../assets/img/DiseñoWebMR.jpg" alt="MRconstrucciones Web Design">
+                <div class="textContainerWork">
+                    <h3 class="t-stroke">MRcons<span>MRcons</span></h3>
+                    <h4>Freelancer</h4>
+                    <h5>Oct 2021 - Presente</h5>
+                    <ul>
+                        <li>Logo design</li>
+                        <li>Stationery design</li>
+                        <li>Web design and development</li>
+                    </ul>
+                </div>
             </div>
         </div>
     </section>
 
     <!-- Education -->
 
-    <section>
-        <h2>Education</h2>
-        <h3>My education to know more</h3>
-        <div>
-            <div>
-                <img src="" alt="Logo Coder House">
-                <h4>Web Developer</h4>
-                <h5>Jul 2020 - Sep 2020</h5>
+    <section class="education">
+        <div class="educationCover">
+            <div class="titleEducation">
+                <h2>Education</h2>
+                <h3>My education to know more</h3>
+                <hr>
             </div>
-            <div>
-                <img src="" alt="Logo IES">
-                <h4>Graphic Design</h4>
-                <h5>Jun 2020 - Actualidad</h5>
+            <div class="cardsEdu">
+                <div class="cardEdu">
+                    <img src="../assets/img/CoderHouseLogo.jpg" alt="Logo Coder House">
+                    <h4>Web Developer</h4>
+                    <h5>Jul 2020 - Sep 2020</h5>
+                </div>
+                <div class="cardEdu">
+                    <img src="../assets/img/IESLogo.jpg" alt="Logo IES">
+                    <h4>Graphic Design</h4>
+                    <h5>Jun 2020 - Actualidad</h5>
+                </div>
             </div>
         </div>
     </section>
 
     <!-- Skills -->
 
-    <section>
-        <h2>Skills</h2>
-        <h3>Skills that make mi strong</h3>
-        <div>
-            <div>
-                <svg></svg>
+    <section class="skills">
+        <div class="titleSkills">
+            <h2>Skills</h2>
+            <h3>Skills that make mi strong</h3>
+            <hr>
+        </div>
+        <div class="containerSkills">
+            <div class="skillCard">
+                <div class="progress" data-progress="90">
+                    <div class="progress__mask progress__mask--full">
+                      <div class="progress__fill"></div>
+                    </div>
+                    <div class="progress__mask">
+                      <div class="progress__fill"></div>
+                    </div>
+                </div>
                 <h4>HTML/CSS</h4>
             </div>
-            <div>
-                <svg></svg>
+            <div class="skillCard">
+                <div class="progress" data-progress="65">
+                    <div class="progress__mask progress__mask--full">
+                      <div class="progress__fill"></div>
+                    </div>
+                    <div class="progress__mask">
+                      <div class="progress__fill"></div>
+                    </div>
+                </div>
                 <h4>JavaScript</h4>
             </div>
-            <div>
-                <svg></svg>
+            <div class="skillCard">
+                <div class="progress" data-progress="70">
+                    <div class="progress__mask progress__mask--full">
+                      <div class="progress__fill"></div>
+                    </div>
+                    <div class="progress__mask">
+                      <div class="progress__fill"></div>
+                    </div>
+                </div>
                 <h4>Photoshop</h4>
             </div>
-            <div>
-                <svg></svg>
+            <div class="skillCard">
+                <div class="progress" data-progress="80">
+                    <div class="progress__mask progress__mask--full">
+                      <div class="progress__fill"></div>
+                    </div>
+                    <div class="progress__mask">
+                      <div class="progress__fill"></div>
+                    </div>
+                </div>
                 <h4>Illustrator</h4>
             </div>
         </div>
@@ -147,26 +199,14 @@
 
     <!-- Projects -->
 
-    <section>
-        <h2>Projects</h2>
-        <h3>Here is my selected projects</h3>
-        <div>
-            <div>
-                <img src="" alt="">
-                <h4></h4>
-                <h5></h5>
-                <p></p>
-                <a href="">www.florenciacollosso.com.ar</a>
-                <button>Ver más</button>
+    <section class="projects">
+        <div class="projectsCover">
+            <div class="titleProjects">
+                <h2>Projects</h2>
+                <h3>Here is my selected projects</h3>
+                <hr>
             </div>
-            <div>
-                <img src="" alt="">
-                <h4></h4>
-                <h5></h5>
-                <p></p>
-                <a href="">www.mrcontrucciones.com.ar</a>
-                <button>Ver más</button>
-            </div>
+            <app-carousel></app-carousel>
         </div>
     </section>
 
