--- a/Portfolio/src/app/app.component.html
+++ b/Portfolio/src/app/app.component.html
@@ -8,212 +8,36 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
-        <img src="../assets/img/APLogo.png" alt="Logo Argentina Programa" class="apLogo">
-        <div>
-            <a href="https://www.linkedin.com/in/florencia-collosso/"><img src="../assets/icons/linkedin-in.svg" alt="Link to Linkedin" class="fa linkedin" target="_blank" rel="noopener noreferrer"></a>
-            <a href="https://www.instagram.com/kllosso/"><img src="../assets/icons/instagram.svg" alt="Link to Instagram" class="fa instagram" target="_blank" rel="noopener noreferrer"></a>
-            <a href="">Login</a>
-        </div>
-    </header>
+
+    <app-header></app-header>
 
     <!-- Portada -->
 
-    <section class="cover">
-        <div class="coverTitle">
-            <h2>Hello</h2>
-            <h1>I'm Florencia Collosso</h1>
-        </div>
-        <video muted autoplay loop>
-            <source src="../assets/img/VideoPortadaPortfolio3.mp4" type="video/mp4">
-            <source src="../assets/img/VideoPortadaPortfolio3.ogg" type="video/ogg">
-            Tu navegador no es compatible con videos HTML5
-        </video>
-    </section>
+    <app-cover></app-cover>
 
     <!-- About  -->
 
-    <section class="about">
-        <div class="titleAbout">
-            <h2>About</h2>
-            <h3>Things about me</h3>
-            <hr>
-        </div>
-        <div class="infoProfile">
-            <div class="circleDiv">
-                <img src="../assets/img/ProfileImg.jpg" alt="Foto de perfil" class="profileImg">
-            </div>
-            <div class="textInfoProfile">
-                <h1>Florencia Collosso</h1>
-                <h4>Graphic Designer | Full Stack Developer Jr.</h4>
-                <p>I am Flor Collosso, a hockey fan, hustler, audiophile, international Swiss style practitioner, and independent graphic designer. I operate at the crossroads of beauty and sustainability to express ideas through design and act at the crossroads of beauty and elegance to create great work for living breathing human beings. I work with fortune 30 companies and startups.
-                </p>
-                <img src="../assets/icons/download_arrow_14460.png" alt="Icono de descarga">
-            </div>
-            
-        </div>
-    </section>
+    <app-about></app-about>
 
     <!-- Works -->
 
-    <section class="works">
-        <div class="titleWorks">
-            <h2>Works</h2>
-            <h3>Relevant experience</h3>
-            <hr>
-        </div>
-        <div class="divWorks">
-            <div class="containerWork">
-                <img src="../assets/img/O'chaMockup.jpg" alt="O'cha Mockup">
-               <div class="textContainerWork">
-                    <h3 class="t-stroke">O'cha<span>O'cha</span></h3>
-                    <h4>Freelancer</h4>
-                    <h5>Abr 2020</h5>
-                    <ul>
-                        <li>Invitation card</li>
-                    </ul>
-               </div> 
-            </div>
-            <div class="containerWork">
-                <img src="../assets/img/CraftingBusinessCard.jpg" alt="Crafting's business card">
-               <div class="textContainerWork">
-                    <h3 class="t-stroke">Crafting<span>Crafting</span></h3>
-                    <h4>Freelancer</h4>
-                    <h5>Abr 2020 - Presente</h5>
-                    <ul>
-                        <li>Brand design</li>
-                        <li>3D modeling and design</li>
-                        <li>Photography</li>
-                        <li>Design and management of social networks</li>
-                    </ul>
-               </div> 
-            </div>
-            <div class="containerWork">
-                <img src="../assets/img/FPfixLogoMockup.jpg" alt="Logo FPFIX">
-                <div class="textContainerWork">
-                    <h3 class="t-stroke">FPFIX<span>FPFIX</span></h3>
-                    <h4>Freelancer</h4>
-                    <h5>Oct 2021 - Nov 2021</h5>
-                    <ul>
-                        <li>Logo design</li>
-                        <li>Stationery design</li>
-                        <li>Social media design</li>
-                    </ul>
-                </div>
-            </div>
-            <div class="containerWork">
-                <img src="../assets/img/DiseñoWebMR.jpg" alt="MRconstrucciones Web Design">
-                <div class="textContainerWork">
-                    <h3 class="t-stroke">MRcons<span>MRcons</span></h3>
-                    <h4>Freelancer</h4>
-                    <h5>Oct 2021 - Presente</h5>
-                    <ul>
-                        <li>Logo design</li>
-                        <li>Stationery design</li>
-                        <li>Web design and development</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </section>
+    <app-works></app-works>
+  
+    <!-- Projects -->
 
-    <!-- Education -->
-
-    <section class="education">
-        <div class="educationCover">
-            <div class="titleEducation">
-                <h2>Education</h2>
-                <h3>My education to know more</h3>
-                <hr>
-            </div>
-            <div class="cardsEdu">
-                <div class="cardEdu">
-                    <img src="../assets/img/CoderHouseLogo.jpg" alt="Logo Coder House">
-                    <h4>Web Developer</h4>
-                    <h5>Jul 2020 - Sep 2020</h5>
-                </div>
-                <div class="cardEdu">
-                    <img src="../assets/img/IESLogo.jpg" alt="Logo IES">
-                    <h4>Graphic Design</h4>
-                    <h5>Jun 2020 - Actualidad</h5>
-                </div>
-            </div>
-        </div>
-    </section>
+    <app-projects></app-projects>
 
     <!-- Skills -->
 
-    <section class="skills">
-        <div class="titleSkills">
-            <h2>Skills</h2>
-            <h3>Skills that make mi strong</h3>
-            <hr>
-        </div>
-        <div class="containerSkills">
-            <div class="skillCard">
-                <div class="progress" data-progress="90">
-                    <div class="progress__mask progress__mask--full">
-                      <div class="progress__fill"></div>
-                    </div>
-                    <div class="progress__mask">
-                      <div class="progress__fill"></div>
-                    </div>
-                </div>
-                <h4>HTML/CSS</h4>
-            </div>
-            <div class="skillCard">
-                <div class="progress" data-progress="65">
-                    <div class="progress__mask progress__mask--full">
-                      <div class="progress__fill"></div>
-                    </div>
-                    <div class="progress__mask">
-                      <div class="progress__fill"></div>
-                    </div>
-                </div>
-                <h4>JavaScript</h4>
-            </div>
-            <div class="skillCard">
-                <div class="progress" data-progress="70">
-                    <div class="progress__mask progress__mask--full">
-                      <div class="progress__fill"></div>
-                    </div>
-                    <div class="progress__mask">
-                      <div class="progress__fill"></div>
-                    </div>
-                </div>
-                <h4>Photoshop</h4>
-            </div>
-            <div class="skillCard">
-                <div class="progress" data-progress="80">
-                    <div class="progress__mask progress__mask--full">
-                      <div class="progress__fill"></div>
-                    </div>
-                    <div class="progress__mask">
-                      <div class="progress__fill"></div>
-                    </div>
-                </div>
-                <h4>Illustrator</h4>
-            </div>
-        </div>
-    </section>
+    <app-skills></app-skills>
 
-    <!-- Projects -->
+    <!-- Education -->
 
-    <section class="projects">
-        <div class="projectsCover">
-            <div class="titleProjects">
-                <h2>Projects</h2>
-                <h3>Here is my selected projects</h3>
-                <hr>
-            </div>
-            <app-carousel></app-carousel>
-        </div>
-    </section>
+    <app-education></app-education>
 
     <!-- Footer -->
 
-    <section>
-        
-    </section>
+    <app-footer></app-footer>
+
 </body>
 </html>
