--- a/Portfolio/src/app/components/about/about.component.css
+++ b/Portfolio/src/app/components/about/about.component.css
@@ -1,5 +1,7 @@
 .about {
     padding: 80px 0;
+    background: var(--grisOscuro);
+    color: #fff;
 }
 
 .titleAbout {
@@ -8,7 +10,7 @@
 }
 
 .titleAbout h2 {
-    color: var(--titulos);
+    color: var(--grisMedio);
     font-size: 14vw;
     font-family: aileron, sans-serif;
     font-weight: 800;
@@ -31,7 +33,7 @@
     position: absolute;
     bottom: -1px;
     left: 8.6vw;
-    background: var(--rosaClaro);
+    background: var(--rosa);
     transition: all .5s ease-in-out;
     z-index: -1;
 }
