--- a/Portfolio/src/app/components/carousel-education/carousel-education.component.html
+++ b/Portfolio/src/app/components/carousel-education/carousel-education.component.html
@@ -1,10 +1,23 @@
-<swiper [navigation]="true" class="swiperEducation">
+<swiper 
+[navigation]="true" class="swiperEducation"
+[slidesPerView]="3"
+[spaceBetween]="-250"
+>
     <ng-template swiperSlide class="swiperSlideEducation">
         <div class="cardEdu">
             <img src="../assets/img/CoderHouseLogo.jpg" alt="Logo Coder House">
             <h4>Web Developer</h4>
             <h5>Jul 2020 - Sep 2020</h5>
         </div>
+    </ng-template>
+    <ng-template swiperSlide class="swiperSlideEducation">
+        <div class="cardEdu">
+            <img src="../assets/img/IESLogo.jpg" alt="Logo IES">
+            <h4>Graphic Designer</h4>
+            <h5>Jun 2020 - Actualidad</h5>
+        </div>
+    </ng-template>
+    <ng-template swiperSlide class="swiperSlideEducation">
         <div class="cardEdu">
             <img src="../assets/img/IESLogo.jpg" alt="Logo IES">
             <h4>Graphic Designer</h4>
