--- a/Portfolio/src/app/components/education/education.component.css
+++ b/Portfolio/src/app/components/education/education.component.css
@@ -1,5 +1,5 @@
 .education {
-    background-image: url("../../../assets/img/BackgroundEducation.jpg");
+    background-image: url("../../../assets/img/BackgroundEducation1.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
@@ -8,6 +8,7 @@
 .educationCover {
     background: rgba(44, 44, 44, 0.3);
     padding-top: 80px;
+    background: linear-gradient(180deg, rgba(20,20,20,1) 0%, rgba(20,20,20,0) 50%, rgba(20,20,20,1) 100%);
 }
 
 .titleEducation {
@@ -17,7 +18,7 @@
 }
 
 .titleEducation h2 {
-    color: rgba(37, 37, 37, 0.6);
+    color: var(--transparente);
     font-size: 13vw;
     font-family: aileron, sans-serif;
     font-weight: 800;
