--- a/Portfolio/src/app/components/skills/skills.component.css
+++ b/Portfolio/src/app/components/skills/skills.component.css
@@ -1,9 +1,6 @@
 .skills {
     background: var(--grisOscuro);
-    padding: 20px 0 50px 0;
-    -webkit-box-shadow: 0px 10px 40px 5px rgba(0,0,0,0.41);
-    -moz-box-shadow: 0px 10px 40px 5px rgba(0,0,0,0.41);
-    box-shadow: 0px 10px 40px 5px rgba(0,0,0,0.41);
+    padding: 20px 0 80px 0;
     position: relative;
     z-index: 1;
 }
@@ -38,7 +35,7 @@
     height: .9vw;
     position: absolute;
     bottom: -1px;
-    background: var(--celeste);
+    background: var(--rosa);
     transition: all .5s ease-in-out;
     z-index: -1;
 }
